Fix project component bug where the component goes off screen on mobile screens Fix contact button bug where buttons do not adjust properly on mobile screens.

--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,11 @@
   --background: #121212;
   --foreground: #ffffff;
 }
+
+html, body {
+  overflow-x: hidden;
+}
+
 html {
   scroll-behavior: smooth;
 }
